--- a/manifest.json
+++ b/manifest.json
@@ -3,23 +3,27 @@
 	"description": "Simple extension to inspect DFP settings in the devtools console.",
 	"version": "1.0",
 	"manifest_version": 2,
+	"minimum_chrome_version": "39",
 	"background": {
 		"scripts": [
 			"background.js"
 		]
 	},
 	"browser_action": {
-		"default_icon": "images/dfp-spy16.png",
-		"default_popup": "action.html"
+		"16": "images/dfp-spy16.png",
+		"24": "images/dfp-spy24.png",
+		"32": "images/dfp-spy32.png",
+		"64": "images/dfp-spy64.png",
+		"128": "images/dfp-spy128.png"
 	},
 	"permissions": [
 		"activeTab",
 		"webRequest",
-		"webRequestBlocking",
 		"<all_urls>"
 	],
 	"icons": {
 		"16": "images/dfp-spy16.png",
+		"24": "images/dfp-spy24.png",
 		"32": "images/dfp-spy32.png",
 		"64": "images/dfp-spy64.png",
 		"128": "images/dfp-spy128.png"
